Bug 430788 - Contact groups: 'Name' searches in Email instead of name
Summary: Contact groups: 'Name' searches in Email instead of name
Status: RESOLVED FIXED
Alias: None
Product: kontact
Classification: Applications
Component: contacts (other bugs)
Version First Reported In: 5.16.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-12-24 14:08 UTC by Axel Braun
Modified: 2021-08-14 14:53 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Axel Braun 2020-12-24 14:08:48 UTC
When adding a contact to a contact group, and one enters something in 'Name', contact proposes an email address. If the name does not by chance match the mail address, nothing is found.
Example: John Doe <mymail@example.com>
give no result when entering 'Joe' in 'Name' column. 

Expected result: When entering a Name, contact should search in the names, not in the emails
Comment 1 Carl Schwan 2021-08-14 14:53:58 UTC
Git commit bca22ddbec58bc4eb9518a23e9731174dcd3a27c by Carl Schwan.
Committed on 14/08/2021 at 14:53.
Pushed by carlschwan into branch 'master'.

Search with name and email address in group contact editor

M  +2    -2    src/akonadi-contacts/contactgroupeditordelegate.cpp

https://invent.kde.org/pim/akonadi-contacts/commit/bca22ddbec58bc4eb9518a23e9731174dcd3a27c