Search with name and email address in group contact editor

BUG: 430788